--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -236,6 +236,11 @@ html {
   width: 100%;
   height: 600px;
 }
+.loader__collaborators {
+  width: 100%;
+  height: 400px;
+  margin: 0 auto;
+}
 .loader {
   position: absolute;
   top: 0px;
